--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "screenshot": "slidev export example.md --format png"
   },
   "dependencies": {
-    "@slidev/types": "^0.51.0-beta.4"
+    "@slidev/types": "^0.51.0-beta.4",
+    "slidev-addon-qrcode": "^1.0.2",
+    "slidev-component-spotlight": "^1.1.0"
   },
   "devDependencies": {
     "@slidev/cli": "^0.51.0-beta.4"
   },
-  "//": "Learn more: https://sli.dev/guide/write-theme.html",
   "slidev": {
     "colorSchema": "both",
+    "addons": [
+      "slidev-component-spotlight",
+      "slidev-addon-qrcode"
+    ],
     "defaults": {
       "fonts": {
         "sans": "Nunito Sans",
