--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "slidev-component-spotlight": "^1.1.0"
   },
   "devDependencies": {
-    "@slidev/cli": "^0.51.0-beta.4"
+    "@slidev/cli": "^0.51.0-beta.4",
+    "playwright-chromium": "^1.50.1"
   },
   "slidev": {
     "colorSchema": "both",
